Fix header spacing

--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,10 @@ blockquote p { font-size: 16px; line-height: 1.6em; }
 .header, .footer, .header h3 { font-family: 'Laila', sans-serif; text-transform: uppercase; font-weight: normal; }
 
 /* Navigation */
-h3.text-muted { white-space: nowrap; }
+h3.text-muted { white-space: nowrap; font-size: 22px; }
 h3.text-muted a {text-decoration: none; color: #999999; }
 h3.text-muted a:hover { text-decoration: none; color: #0088cc; }
-.header .nav-pills > li > a { padding-left: 10px; padding-right: 10px; }
+.header .nav-pills > li > a { padding-left: 8px; padding-right: 8px; font-size: 14px; }
 
 /*img.avatar { margin-bottom: 30px; }*/
 
